# drost

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  drost.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
docs/: README.md  architecture.md  auth-and-providers.md  cognition.md  config-reference.md  configuration.md  control-api.md  deployer.md  getting-started.md  memory.md  observability.md  providers.md  runtime-operations.md  self-evolution.md  telegram.md  tools.md  troubleshooting.md  workspace.md
drost/: __init__.py  __main__.py  agent.py  agent_loop.py  cognitive_artifacts.py  cognitive_summary.py  config.py  context_budget.py  conversation_loop.py  drive_loop.py  embeddings.py  entity_resolution.py  followups.py  gateway.py  gateway_main.py  idle_heartbeat.py  idle_state.py  loop_events.py  loop_manager.py  loop_runner.py  main.py  managed_loop.py  memory_capsule.py  memory_files.py  memory_maintenance.py  memory_promotion.py  operational_truths.py  prompt_assembly.py  quality_gates.py  reflection_loop.py  session_continuity.py  shared_mind_state.py  worker_supervision.py  workspace_bootstrap.py  workspace_loader.py
examples/: deployer.config.toml
memory/: README.md
prompts/: system.md
tests/: test_agent_loop.py  test_cognitive_artifacts.py  test_cognitive_summary.py  test_config.py  test_context_budget.py  test_conversation_loop.py  test_deployer.py  test_deployer_tools.py  test_drive_loop.py  test_embeddings.py  test_entity_resolution.py  test_entrypoints.py  test_followup_tools.py  test_followups.py  test_keys.py  (+31 more)
(+148 files in other folders)
