[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drost"
version = "0.1.0"
description = "Drost: stripped-down open-source AI agent gateway"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Drost Contributors" }
]
keywords = ["ai", "agent", "telegram", "fastapi", "openai", "anthropic", "xai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "anthropic>=0.40.0",
  "google-genai>=1.66.0",
  "openai>=1.50.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "aiogram>=3.4.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.scripts]
drost = "drost.main:main"
drost-gateway = "drost.gateway_main:main"
drost-deployer = "drost.deployer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["drost"]
include = ["drost/bootstrap/workspace/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
